--- a/login.html
+++ b/login.html
@@ -76,6 +76,8 @@
 
     <script type="module" src="config.js"></script>
     <script type="module" src="auth.js"></script>
+    <script type="module" src="auth.js"></script>
+    <script type="module" src="home.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
